--- a/style.css
+++ b/style.css
@@ -22,26 +22,9 @@ body {
 	overflow: hidden;
 }
 
-body::before {
-	--size: 60px;
-	--line: color-mix(in lch, canvasText 35%, hsl(0 0% 100% / 0.25));
-	content: '';
-	height: 100svh;
-	width: 100vw;
-	position: fixed;
-	background: linear-gradient(
-				90deg,
-				var(--line) 1px,
-				transparent 1px var(--size)
-			)
-			50% 50% / var(--size) var(--size),
-		linear-gradient(var(--line) 1px, transparent 1px var(--size)) 50% 50% /
-			var(--size) var(--size);
-	mask: linear-gradient(-25deg, transparent 65%, white);
-	top: 0;
-	transform-style: flat;
-	pointer-events: none;
-	z-index: -1;
+body {
+  background: white;
+  color: black;
 }
 
 main {
@@ -78,13 +61,6 @@ ul {
 	padding: 0;
 	margin: 0;
 	display: grid;
-}
-
-img {
-	border-radius: 12px;
-	width: 100%;
-	height: 100%;
-	background-color: color-mix(in lch, canvasText 25%, canvas);
 }
 
 h1 {
